--- a/Mahiruś.html
+++ b/Mahiruś.html
@@ -10,6 +10,6 @@
     <div style="text-align: center;"><h1>Shiina Mahiru</h1><img src="Mahiruś.jpg"></div>
     <h2><p style="text-align: center;">Mahiru jest bardzo ładną dziewczyną, ma długie blond włosy. Pomimo że nie przepadam za taką fryzurą to jednak<br> na niej prezentuje się to iście cudownie. Jeśli chodzi o charakter to coś pięknego, jest bardzo pomocna,<br> miła, uczynna, słodka i uwielbiam kiedy jest na ekranie. Jej niewinna natura sprawia, że chcesz ją chronić i nie chcesz żeby kiedykolwiek płakała.😊</p></h2><br>
 
-    <h2><p style="text-align: center;"><a href="Moje Waifu.html" style=color:aqua>Powrót do strony głównej</a></p></h2>
+    <h2><p style="text-align: center;"><a href="index.html " style=color:aqua>Powrót do strony głównej</a></p></h2>
 </body>
 </html>
