--- a/Rikka.html
+++ b/Rikka.html
@@ -10,6 +10,6 @@
     <div style="text-align: center;"><h1>Takanashi Rikka</h1><img src="Rikka.jpg"></div>
     <h2><p style="text-align: center;">Rikka jest bardzo młodą dziewczyną, trochę szaloną ale to tylko dodaje jej<br> uroku. Można powiedziec, że "choruje" na tak zwane chunibyo. To sprawia że zachowuje się jakby miała super moce<br> a tak naprawdę jest bardzo fajtłapowata ale to tylko jej zaleta. Sprawia to że jest naprawdę słodiutka<br> i aż chce się ją wyściskac albo po prostu spędzić z nią czas bo z nią na pewno się nie zanudzisz. </p></h2><br>
 
-    <h2><p style="text-align: center;"><a href="Moje Waifu.html" style=color:aqua>Powrót do strony głównej</a></p></h2>
+    <h2><p style="text-align: center;"><a href="index.html" style=color:aqua>Powrót do strony głównej</a></p></h2>
 </body>
 </html>
