--- a/Miko.html
+++ b/Miko.html
@@ -10,6 +10,6 @@
     <div style="text-align: center;"><h1>Iino Miko</h1><img src="Miko.jpg"></div>
     <h2><p style="text-align: center;"> Miko jest postacią poboczną ale mimo to osobiście skradła moje serce. Jest niska i słodka<br> ale mimo to potrafi być zadziorna, jest trochę tsundere co dodaje jej charakteru. Często chce się rządzić ale wygląda<br> tak słodko, że nie traktujesz jej poważnie. Mimo wszystko trzeba się z nią liczyć. Może nie ma<br> krótkich włosów ale ma śliczną fryzurę, dodatkowo chodzi w czarnym mundurku co tylko podkreśla jej urok.</p></h2><br>
 
-    <h2><p style="text-align: center;"><a href="Moje Waifu.html" style=color:aqua>Powrót do strony głównej</a></p></h2>
+    <h2><p style="text-align: center;"><a href="index.html" style=color:aqua>Powrót do strony głównej</a></p></h2>
 </body>
 </html>
