--- a/Miko.html
+++ b/Miko.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miko</title>
+    <link rel="icon" href="ikona.jpg">
 </head>
 <body style="background-color: black; color:white">
     
