--- a/Kontakt.html
+++ b/Kontakt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt</title>
+    <link rel="icon" href="ikona.jpg">
 </head>
 <body style="background-color: black; color: white;">
     <div style="text-align: center;"><h1>Kontakt</h1></div><br>
