--- a/Linki.html
+++ b/Linki.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Linki</title>
+    <link rel="icon" href="ikona.jpg">
 </head>
    
     <body style="background-color: black; color:white">
